--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>الكابتن: علي النونو</title>
+    <title>الكابتن علي النونو</title>
   </head>
   <body>
     <div id="root"></div>
